Fix horiz scrollbar on title.

--- a/app/css/title.sass
+++ b/app/css/title.sass
@@ -14,6 +14,7 @@
   // text-shadow: 1px 1px $red, 2px 2px $red, 3px 3px $red, 4px 4px $red, 5px 5px $red, 6px 6px $red, -1px -1px $red, 1px -1px $red, -1px 1px $red
   text-shadow: 0 0 5px $red
   box-shadow: 0 0 8px rgba(black, 0.4)
+  overflow: hidden
 
   // Use a CSS background for mobile, and hide the video
   @media (max-width: 480px) /* Mobile */
